--- a/components/newGuest/newGuest.module.css
+++ b/components/newGuest/newGuest.module.css
@@ -53,6 +53,7 @@
     
     .button {
     padding: 10px 20px;
+    margin-bottom: 20px;
     border-radius: 5px;
     border: none;
     background-color: var(--primary-color);
