--- a/components/newGuest/newGuest.module.css
+++ b/components/newGuest/newGuest.module.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
-    height: 430px;
+    height: 500px;
 }
 .stitle{
     font-size: 13px;
@@ -99,4 +99,24 @@
         text-align: left;
         font-weight: bold;
     }
-
+    .spinnerBox{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .spinner {
+        margin-top: 50px;
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-left-color: #333;
+        border-radius: 50%;
+        width: 2rem;
+        height: 2rem;
+        animation: spin 1s linear infinite;
+      }
+      
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
