--- a/components/musicButton/musicButton.module.css
+++ b/components/musicButton/musicButton.module.css
@@ -1,12 +1,13 @@
 .buttonOff{
     background-image: url('../../public/utils/haut-parleur-gris-et-icone-sonore.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 40%;
     background-position: center;
     position: fixed;
     bottom: 550px;
     right: 0;
-    background-color: var(--primary-color);
+    background-color: var(--background-color);
+    margin: 5px;
     height: 30px;
     width: 30px;
     cursor: pointer;
@@ -15,15 +16,14 @@
     align-items: center;
 }
 .buttonOn{
-    background-image:  url('../../public/utils/music.gif');
+    background-image:  url('../../public/utils/music2.gif');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x:-8px;
-    background-position-y:-13px;
+    background-size: 80%;
+    background-position:center;
     position: fixed;
     bottom: 550px;
     right: 0;
-    background-color: var(--primary-color);
+    background-color: var(--background-color);
     height: 30px;
     width: 30px;
     cursor: pointer;
