--- a/components/formLogin/formLogin.module.css
+++ b/components/formLogin/formLogin.module.css
@@ -1,22 +1,23 @@
 .container {
+  font-family: TertiaryFont;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: #b09494;
-  border-radius: 10px;
-  height: 100dvh;
+  justify-content: center;
+  height: 100vh;
+  background-color: var(--alternate-color);
 }
 
 .title {
-  font-size: 28px;
-  color: #ffcccc;
+  font-size: 22px;
+  text-align: center;
+  color: var(--tertiary-color);
   margin-bottom: 20px;
 }
 
 .label {
-  font-size: 14px;
-  color: #ffcccc;
+  font-size: 16px;
+  color: var(--background-color);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -31,7 +32,7 @@
   color: black;
   border-radius: 5px;
   border: none;
-  background-color: #e8e0e0;
+  background-color: var(--border-color);
   margin-top: 5px;
 }
 
@@ -44,14 +45,15 @@
   background-color: transparent;
   border: none;
   font-size: 20px;
-  color: #ffcccc;
+  color: var(--primary-color);
   margin-left: 5px;
   cursor: pointer;
 }
 
 .submitButton {
-  background-color: #ffcccc;
-  color: #fff;
+  font-family: TertiaryFont;
+  background-color: var(--tertiary-color);
+  color: var(--background-color);
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -62,11 +64,11 @@
 }
 
 .submitButton:hover {
-  background-color: #ffc2c2;
+  background-color: var(--primary-color);
 }
 .spinner {
   margin-top: 50px;
-  border: 4px solid rgba(0, 0, 0, 0.1);
+  border: 4px solid var(--tertiary-color);
   border-left-color: #333;
   border-radius: 50%;
   width: 2rem;
@@ -78,4 +80,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+.whiteFlower{
+  background-image: url('../../public/utils/florBlanca.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  height: 150px;
+  width: 150px;
+  margin-top: -350px;
+  margin-left: -200px;
+  transform: rotate(45deg);
+}
+.whiteButerfly{
+  background-image: url('../../public/utils/mariposaBlanca.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  height: 150px;
+  width: 150px;
+  margin-top: 400px;
+  margin-left: 200px;
+  /* transform: rotate(45deg); */
 }
