--- a/components/newGuest/newGuest.module.css
+++ b/components/newGuest/newGuest.module.css
@@ -1,24 +1,3 @@
-.form{
-    width: 350px;
-    display: flex;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--border-color);
-    border-radius: 5%;
-    padding: 5%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    height: 500px;
-}
-.stitle{
-    font-size: 13px;
-}
-.sselect{
-    font-size: 17px;
-    height: 10px;
-}
 .container {
     display: flex;
     flex-direction: column;
@@ -28,20 +7,37 @@
     height: 100vh;
     gap: 40px;
     background-color: var(--background-color);
-    }
-    
-    .inputWrapper {
+}
+.topPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.form{
+    width: 200px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
-    }
-    
-    .label {
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--border-color);
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 5%;
+    font-size: 14px;
+}
+.title{
+    font-size: 20px;
+    color: var(--primary-color);
+}
+.label {
     font-size: 14px;
     color:var(--tertiary-color);
-    }
-    
-    .input {
+}
+.input {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid var(--secondary-color);
@@ -49,51 +45,85 @@
     color: var(--tertiary-color);
     background-color: var(--secondary-color);
     height: 30px;
-    }
-    .divButtons{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        margin-bottom: 10px;
-    }
-    .button{
-        background-color:var(--secondary-color);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 200px;
-        height: 40px;
-        border-radius: 20px;
-        border: 2px solid var(--border-color);
-        color: var(--font-primary-color);
-    }
-    .button:hover{
-        background-color: var(--primary-color);
-        cursor: pointer;
-    }
-    .divList{
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
+    width: 150px;
+}
+.submitButton{
+    background-color:var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 40px;
+    border-radius: 20px;
+    border: 2px solid var(--border-color);
+    color: var(--font-primary-color);
+    margin-top: 20px;
+}
+.submitButton:hover{
+    background-color: var(--primary-color);
+    cursor: pointer;
+}
+.divButtons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+.button{
+    background-color:var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    border: 0;
+    border-radius: 20px;
+    color: var(--font-primary-color);
+}
+.button:hover{
+    background-color: var(--border-color);
+    cursor: pointer;
+}
+.divList{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     color: var(--tertiary-color);
     text-align: center;
-    }
+}
+.listTitle{
+    font-weight: bolder;
+    font-size: 20px;
+}
+.ListContainer{
+    width: 350px;
+    display: flex;
+    justify-content: left;
+    gap: 10px;
+}
+
+.stitle{
+    font-size: 13px;
+}
+.sselect{
+    font-size: 17px;
+    height: 10px;
+}
+    
+    
+    
+    
+    
+    
+   
     .List{
         font-size: 15px;
         text-align: left;
     }
-    .listTitle{
-        font-weight: bolder;
-        font-size: 20px;
-    }
-    .ListContainer{
-        width: 350px;
-        display: flex;
-        justify-content: left;
-        gap: 10px;
-    }
+    
+    
     .ListSubTitle{
         font-size: 15px;
         text-align: left;
