--- a/components/newGuest/newGuest.module.css
+++ b/components/newGuest/newGuest.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding-top: 50px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     gap: 40px;
     background-color: var(--background-color);
 }
@@ -92,6 +92,7 @@
     gap: 15px;
     color: var(--tertiary-color);
     text-align: center;
+    margin-bottom: 30px;
 }
 .listTitle{
     font-weight: bolder;
@@ -111,16 +112,38 @@
     font-size: 17px;
     height: 10px;
 }
-.List{
+.ListSubTitleNum{
     font-size: 15px;
-    text-align: left;
-}
-
-
-.ListSubTitle{
-    font-size: 15px;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
+    width: 20px;
+}
+.ListSubTitleName{
+    font-size: 15px;
+    text-align: center;
+    font-weight: bold;
+    width: 150px;
+}
+.ListSubTitlePh{
+    font-size: 15px;
+    text-align: center;
+    font-weight: bold;
+    width: 120px;
+}
+.ListNum{
+    font-size: 15px;
+    text-align: center;
+    width: 20px;
+}
+.ListName{
+    font-size: 15px;
+    text-align: left;
+    width: 150px;
+}
+.ListPh{
+    font-size: 15px;
+    text-align: center;
+    width: 120px;
 }
 .spinnerBox{
     display: flex;
@@ -138,7 +161,28 @@
     animation: spin 1s linear infinite;
 }
 @keyframes spin {
-to {
-    transform: rotate(360deg);
+    to {
+        transform: rotate(360deg);
+    }
 }
+@media (min-width: 700px){
+    .form{
+        width: 600px;
+        height: auto;
+    }
+    .input {
+        height: 30px;
+        width: 500px;
+    }
+    .ListContainer{
+        width: 450px;
+        gap: 15px;
+        justify-content: space-around;
+    }
+    .ListName{
+        width: 300px;
+    }
+    .ListSubTitleName{
+        width: 300px;
+    }
 }
